--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
 	],
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"php": ">=7.4",
-		"typo3/cms-core": "^11.5",
-		"spatie/opening-hours": "*"
+		"php": ">=8.0",
+		"typo3/cms-core": "^11.5 || ^12.4",
+		"spatie/opening-hours": "^3.0"
 	},
 	"require-dev": {
 		"ergebnis/composer-normalize": "^2.24",
@@ -25,8 +25,8 @@
 		"helmich/typo3-typoscript-lint": "^3.0",
 		"phpstan/extension-installer": "^1.2",
 		"phpstan/phpstan": "^1.4",
-		"typo3/coding-standards": "^0.6.1",
-		"typo3/testing-framework": "^6.16"
+		"typo3/coding-standards": "^0.7.1",
+		"typo3/testing-framework": "^8.0"
 	},
 	"autoload": {
 		"psr-4": {
